# Renderer

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Math/: CMakeLists.txt
lib/Math/include/: Cone.h  Cylinder.h  Mat4x4.h  Material.h  MathHelper.h  Mesh.h  Plane.h  Primitive.h  Ray.h  Sphere.h  Torus.h  Triangle.h  Vec3.h  Vec4.h  const.h
lib/Math/src/: Cone.cpp  Cylinder.cpp  Mat4x4.cpp  Mesh.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  Torus.cpp  Triangle.cpp  Vec3.cpp  Vec4.cpp
lib/Renderer/: CMakeLists.txt
lib/Renderer/include/: Buffer.h  Camera.h  Light.h  LightIntensity.h  OrthoCamera.h  PerspectiveCamera.h  PointLight.h  Rasterizer.h  Scene.h  VertexProcessor.h  Writer.h
lib/Renderer/src/: Buffer.cpp  Camera.cpp  Light.cpp  LightIntensity.cpp  OrthoCamera.cpp  PerspectiveCamera.cpp  Rasterizer.cpp  VertexProcessor.cpp  Writer.cpp
lib/include/: Buffer.h
lib/src/: Buffer.cpp  Writer.cpp
src/: CMakeLists.txt  main.cpp
